--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,12 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.3.3", features = ["derive"] }
-rs_ws281x = "0.4.4"
+ws2818-rgb-led-spi-driver = "2.0.0"
+color-art = "0.3.6"
+regex= "1.9.5"
+
+[dev-dependencies]
+
+[patch.crates-io]
+ws2818-rgb-led-spi-driver = {git = "https://github.com/Danzibob/WS28xx-n-channel-spi.git"}
+
