--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.3.3", features = ["derive"] }
 ws2818-rgb-led-spi-driver = "2.0.0"
-color-art = "0.3.6"
-regex= "1.9.5"
+ecolor = "0.22.0"
 
 [dev-dependencies]
 
